force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/Capacity_Planning_Calculation_Weightage__mdt.object-meta.xml
<CustomObject>
    <label>Capacity Planning Calculation Weightage</label>
    <pluralLabel>Capacity Planning Calculation Weightages</pluralLabel>
</CustomObject>