force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Accum_Files__c.field-meta.xml
<CustomField>
    <fullName>Accum_Files__c</fullName>
    <label>Accum Files</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>