force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Add_onmultipplier__c.field-meta.xml
<CustomField>
    <fullName>Add_onmultipplier__c</fullName>
    <label>Add-onmultipplier</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>