force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Carve_In_Pharmacy__c.field-meta.xml
<CustomField>
    <fullName>Carve_In_Pharmacy__c</fullName>
    <label>Carve - In Pharmacy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>