force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/COBRA__c.field-meta.xml
<CustomField>
    <fullName>COBRA__c</fullName>
    <label>COBRA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>