force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Communications__c.field-meta.xml
<CustomField>
    <fullName>Communications__c</fullName>
    <label>Communications</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>