force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Critical_Illness__c.field-meta.xml
<CustomField>
    <fullName>Critical_Illness__c</fullName>
    <label>Critical Illness</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>