force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/CSP_GSP_or_Extended_Networks__c.field-meta.xml
<CustomField>
    <fullName>CSP_GSP_or_Extended_Networks__c</fullName>
    <label>CSP/GSP or Extended Networks</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>