force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Customer_layers_incl_consultants__c.field-meta.xml
<CustomField>
    <fullName>Customer_layers_incl_consultants__c</fullName>
    <label>Customer layers (incl consultants)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>