force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Customer_Sponsored_Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sponsored_Service_Center__c</fullName>
    <label>Customer - Sponsored Service Center</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>