force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Dental__c.field-meta.xml
<CustomField>
    <fullName>Dental__c</fullName>
    <label>Dental</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>