force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/DHP_Diabetes_Health_Plan__c.field-meta.xml
<CustomField>
    <fullName>DHP_Diabetes_Health_Plan__c</fullName>
    <label>DHP (Diabetes  Health Plan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>