force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Eligibility__c</fullName>
    <label>Eligibility</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>