force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/External_Audits__c.field-meta.xml
<CustomField>
    <fullName>External_Audits__c</fullName>
    <label>External Audits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>