force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Frozen_ASO_Plans__c.field-meta.xml
<CustomField>
    <fullName>Frozen_ASO_Plans__c</fullName>
    <label>Frozen ASO Plans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>