force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Frozen_UMR_Plans_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Frozen_UMR_Plans_Weightage__c</fullName>
    <label>Frozen UMR Plans Weightage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>