force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/FSA__c.field-meta.xml
<CustomField>
    <fullName>FSA__c</fullName>
    <label>FSA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>