force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Hospital_Systems__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Systems__c</fullName>
    <label>Hospital Systems</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>