force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Incentives_Rewards__c.field-meta.xml
<CustomField>
    <fullName>Incentives_Rewards__c</fullName>
    <label>Incentives/Rewards</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>