force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/KA_to_NA_transition__c.field-meta.xml
<CustomField>
    <fullName>KA_to_NA_transition__c</fullName>
    <label>KA to NA transition</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>