force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Life__c.field-meta.xml
<CustomField>
    <fullName>Life__c</fullName>
    <label>Life</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>