force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Medicare_Plans__c.field-meta.xml
<CustomField>
    <fullName>Medicare_Plans__c</fullName>
    <label>Medicare Plans</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>