force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/New_Business_Exchange_Transition_Factor__c.field-meta.xml
<CustomField>
    <fullName>New_Business_Exchange_Transition_Factor__c</fullName>
    <label>New Business/Exchange Transition Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>