force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/New_Product_1st_Year__c.field-meta.xml
<CustomField>
    <fullName>New_Product_1st_Year__c</fullName>
    <label>New Product 1st Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>