force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/No_Weightage__c.field-meta.xml
<CustomField>
    <fullName>No_Weightage__c</fullName>
    <label>No Weightage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>