force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Non_Eligibility_Vendor_Feeds__c.field-meta.xml
<CustomField>
    <fullName>Non_Eligibility_Vendor_Feeds__c</fullName>
    <label>Non Eligibility Vendor Feeds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>