force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/of_Member_Meetings__c.field-meta.xml
<CustomField>
    <fullName>of_Member_Meetings__c</fullName>
    <label># of Member Meetings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>