force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Optum_Partnership__c.field-meta.xml
<CustomField>
    <fullName>Optum_Partnership__c</fullName>
    <label>Optum Partnership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>