force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Salesforce_Volume__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Volume__c</fullName>
    <label>Salesforce Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>