force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/SBC__c.field-meta.xml
<CustomField>
    <fullName>SBC__c</fullName>
    <label>SBC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>