force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/SPD__c.field-meta.xml
<CustomField>
    <fullName>SPD__c</fullName>
    <label>SPD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>