force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/UHG_Owned_Custom_Portal__c.field-meta.xml
<CustomField>
    <fullName>UHG_Owned_Custom_Portal__c</fullName>
    <label>UHG Owned Custom Portal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>