force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Vision__c.field-meta.xml
<CustomField>
    <fullName>Vision__c</fullName>
    <label>Vision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>