force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/X3_or_4_Tier_Benefit_5__c.field-meta.xml
<CustomField>
    <fullName>X3_or_4_Tier_Benefit_5__c</fullName>
    <label>3 or 4 Tier Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>