force-app/main/default/objects/Capacity_Planning_Calculation_Weightage__mdt/fields/Yes_Weightage__c.field-meta.xml
<CustomField>
    <fullName>Yes_Weightage__c</fullName>
    <label>Yes Weightage</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>